# TigiNet

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTACT.md  HEADER_LICENSE  LICENSE  README.md  VERSION
docs/: PARSER LICENSE  changelog.html  index.html  roadmap.html
docs/GenDoc/html/: _clock_8cpp.html  _clock_8cpp__incl.map  _clock_8cpp__incl.md5  _clock_8hpp.html  _clock_8hpp.js  _clock_8hpp__dep__incl.map  _clock_8hpp__dep__incl.md5  _clock_8hpp__incl.map  _clock_8hpp__incl.md5  _clock_8hpp_source.html  _config_8cpp.html  _config_8cpp.js  _config_8cpp__incl.map  _config_8cpp__incl.md5  _config_8hpp.html  _config_8hpp.js  _config_8hpp__dep__incl.map  _config_8hpp__dep__incl.md5  _config_8hpp__incl.map  _config_8hpp__incl.md5  _config_8hpp_source.html  _conv_layer_8hpp.html  _conv_layer_8hpp__dep__incl.map  _conv_layer_8hpp__dep__incl.md5  _conv_layer_8hpp__incl.map  _conv_layer_8hpp__incl.md5  _conv_layer_8hpp_source.html  _conv_layer_8inl.html  _conv_layer_8inl.js  _conv_layer_8inl__dep__incl.map  _conv_layer_8inl__dep__incl.md5  _core_2_config_8hpp.html  _core_2_config_8hpp.js  _core_2_config_8hpp__dep__incl.map  _core_2_config_8hpp__dep__incl.md5  _core_2_config_8hpp__incl.map  _core_2_config_8hpp__incl.md5  _core_2_config_8hpp_source.html  _core_8cpp.html  _core_8cpp__incl.map  (+915 more)
docs/GenDoc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  defines_1.js  (+52 more)
docs/GenFiles/: DOXYGEN LICENSE  GENDOC.bat  config  footer.html  header.tex  stylesheet.css
docs/css/: index.css  main.css
examples/: README.md
examples/MNIST/: README.md  net.tn
examples/files/: MLP_LEARN_FROM_FILE_SAMPLE.txt
examples/mlp/: README.txt
examples/mlp/ressources/: learn1.txt
examples/mlp/src/: Test.cpp
inc/: Prerequisites.hpp
inc/Core/: Clock.hpp  Config.hpp  Error.hpp  File.hpp  Functor.hpp  Functor.inl  Log.hpp  Memory.hpp  Mutex.hpp  Singleton.hpp  Singleton.inl  String.hpp  Thread.hpp  Thread.inl
inc/MLP/: Config.hpp  MLP.cl  MLP.hpp
inc/NeuralNet/: Config.hpp  Cost.hpp  Cost.inl  Initializer.hpp  Initializer.inl  Layer.hpp  Layer.inl  Optimizer.hpp  Optimizer.inl
inc/NeuralNet/Layer/: ConvLayer.hpp  ConvLayer.inl  FCLayer.hpp  FCLayer.inl  FullyConnected.hpp  FullyConnected.inl  PoolingLayer.hpp  PoolingLayer.inl  ReluLayer.hpp  ReluLayer.inl
inc/Script/: MLP.cl
inc/Test/: Test.hpp  test.vs
inc/Utility/: Config.hpp  Gradient.hpp  Layer.hpp  Link.hpp  MNIST.hpp  MNIST.inl  Math.hpp  Math.inl  Neurone.hpp  Tensor.hpp  Tensor.inl
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  Clock.cpp  Error.cpp  File.cpp  Log.cpp  Mutex.cpp  String.cpp  Thread.cpp
src/MLP/: CMakeLists.txt  MLP.cpp
src/NeuralNet/: CMakeLists.txt  Layer.cpp
src/Test/: CMakeLists.txt  Test.cpp
src/Utility/: CMakeLists.txt  Config.cpp  Layer.cpp  Link.cpp  Math.cpp  Neurone.cpp  Tensor.cpp
